[package]
name = "rusty-ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
psutil = "3.2.2"
axiom-rs = "0.8.0"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["macros"] }
warp = "0.3.5"
