[package]
edition = "2021"
name = "rusty-ip"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-rs = "0.8.0"
parking_lot = "0.10.0"
psutil = "3.2.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.28.1", features = ["macros"]}
warp = "0.3.5"
